@@ -1,4 +1,18 @@
 nload
 =====
 
-my enhanced nload
+Fork from nload by Roland Riegel.
+
+Auto dynamic scaling to show incoming and outcoming speed, setting for -i max_scaling -o max_scaling is invaild now.
+
+
+
+## Install
+
+./configure
+
+make
+
+make install 
+
+more details, read the README manual
